动态菜单基本实现
